# advent-of-code-2024

./: README.md
ocaml/day1/: dune  main.ml
ocaml/day1/_build/: .db  .digest-db  log
ocaml/day10/: Makefile  dune  log.txt  puzzle.ml  puzzle_bin.ml
ocaml/day11/: dune  puzzle.ml  utils.ml
ocaml/day12/: dune  puzzle.ml  utils.ml
ocaml/day13/: dune  puzzle.ml
ocaml/day14/: 1  dune  log.txt  log2.txt  puzzle.ml  utils.ml
ocaml/day15/: puzzle.ml  puzzle_bin.ml
ocaml/day16/: log.txt  puzzle.ml  utils.ml
ocaml/day17/: puzzle.ml  puzzle_bin.ml
ocaml/day18/: log.txt  puzzle.ml  puzzle_bin.ml
ocaml/day19/: dune  puzzle.ml  utils.ml
ocaml/day2/: dune  puzzle.ml  puzzle_run.ml
ocaml/day2/_build/: .db  .digest-db  log
ocaml/day2/_build/default/: puzzle.cma  puzzle.cmxa  puzzle.cmxs  puzzle.pp.ml
ocaml/day20/: log.txt  puzzle.ml  puzzle_bin.ml  puzzle_old.ml
ocaml/day21/: puzzle.ml  puzzle_old.ml
ocaml/day22/: dune  log.txt  puzzle.ml
ocaml/day23/: log.txt  puzzle.ml
ocaml/day24/: log.txt  log2.txt  puzzle.ml
ocaml/day25/: .gitattributes  Makefile  puzzle.ml  utils.ml
ocaml/day3/_build/: .db  .digest-db  log
ocaml/day3/_build/default/: puzzle.cma  puzzle.cmxa  puzzle.cmxs  puzzle.ml  puzzle.pp.ml  puzzle_bin.ml  utils.cma  utils.cmxa
ocaml/day4/: utils.ml
ocaml/day4/_build/: .db  .digest-db  log
ocaml/day4/_build/default/: puzzle.cma  puzzle.cmxa  puzzle.cmxs  puzzle.ml  (+3 more)
ocaml/day5/: Makefile  dune  puzzle.ml  utils.ml
ocaml/day6/: log.txt  puzzle.ml  utils.ml
ocaml/day7/: Makefile  dune  puzzle.ml  puzzle_bin.ml
ocaml/day8/: puzzle.ml
ocaml/day9/: puzzle.ml  utils.ml
(+48 files in other folders)
