(executable
 (name puzzle_bin)
 (modules puzzle_bin)
 (libraries csv puzzle utils base))

(library
 (name puzzle)
 (modules puzzle)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test ppx_deriving.show))
 (libraries utils str base))

(library
 (name utils)
 (modules utils)
 (inline_tests)
 (libraries base)
 (preprocess
  (pps ppx_inline_test)))
