(executable
 (name puzzle_bin)
 (modules puzzle_bin)
 (libraries csv puzzle utils base))

(library
 (name puzzle)
 (modules puzzle)
 (inline_tests)
 (preprocess
  (pps
   ppx_inline_test
   ppx_compare
   ppx_deriving.show
   ppx_deriving.make
   ppx_hash
   ppx_sexp_conv))
 (libraries utils str re core))

(library
 (name utils)
 (modules utils)
 (inline_tests)
 (libraries str re core)
 (preprocess
  (pps ppx_inline_test)))
